# agentic-521e6936

./: pyproject.toml
insight_agent/: __init__.py  column_mapper.py  engine.py  llm.py  models.py
insight_agent/agents/: base.py  conversion_agent.py  ctr_agent.py  fatigue_agent.py  roas_agent.py
service/: api.py
