[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insight-agent"
version = "0.1.0"
description = "InsightAgent Engine: headless marketing analytics with semantic column mapping and agentic insights"
authors = [{ name = "InsightAgent" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["marketing", "analytics", "agents", "langgraph", "pydantic", "insights"]

dependencies = [
  "pydantic>=2.5.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "python-dotenv>=1.0.1",
  "openai>=1.43.0",
  # Optional at runtime; engine degrades if unavailable
  "langgraph>=0.2.28; python_version >= '3.10'",
]

[project.urls]
Homepage = "https://agentic-521e6936.vercel.app"

[tool.setuptools.packages.find]
where = ["."]
include = ["insight_agent*", "service*"]

[tool.setuptools.package-data]
insight_agent = ["py.typed"]

[tool.ruff]
line-length = 100

